--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
 
 body {
     margin: 0;
-    font-family: 'Caveat', sans-serif;
+    font-family: 'League Spartan', sans-serif;
     background-color: darkred;
 }
 
 .bg-image {
     width: 100%;
     height: 100vh;
-    background: url('gille81.jpg');
+    background: url('./images/hero.jpg');
     background-position:center;
     background-attachment: fixed;
     background-size: 120%;
