--- a/style.css
+++ b/style.css
@@ -1,57 +1,92 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
 
-body {
-    margin: 0;
-    font-family: 'League Spartan', sans-serif;
-    background-color: darkred;
+:root {
+  --main: #333;
+  --second: #8b0000;
+  --bg: #888;
+  --bg-l: #eee;
+  --bg-m: #ededed;
+  --bg-d: #dedede;
+  --box: 5px 10px 15px rgba(0, 0, 0, 0.3);
 }
 
-.bg-image {
-    width: 100%;
-    height: 100vh;
-    background: url('./images/hero.jpg');
-    background-position:center;
-    background-attachment: fixed;
-    background-size: 120%;
+body {
+  margin: 0;
 }
 
 .container {
-    padding: 100px;
+  font-family: 'League Spartan', sans-serif;
+  background-color: var(--bg);
+}
+
+h1,
+h2,
+h3 {
+  color: var(--second);
+  font-weight: 300;
+  text-align: center;
 }
 
 h1 {
-    font-size: 80px;
-    color : yellow;
-    text-align: center;
+  font-size: 60px;
 }
 
 h2 {
-    font-size: 45px;
-    text-align: center;
+  font-size: 35px;
 }
 
 h3 {
-    font-size: 38px;
-    text-align: center;
-}
-
-strong {
-    font-size: 25px;
-    color: darkgoldenrod;
-}
-
-em {
-    text-align: center;
-    font-size: 23px;
+  font-size: 30px;
 }
 
 p {
-    color: yellow;
-    font-size: 30px
+  font-size: 25px;
+  font-weight: 300;
+  color: var(--main);
+  text-align: center;
 }
 
-@media(max-width: 500px) {
-    .container {
-        padding: 10px;
-    }
+.bg-l,
+.bg-m,
+.bg-d {
+  background-color: green;
+  padding: 10px 35px;
+  margin: 100px 0;
+  border-radius: 5px;
+  box-shadow: var(--box);
+}
+
+.bg-l {
+  background-color: var(--bg-l);
+}
+
+.bg-m {
+  background-color: var(--bg-m);
+}
+
+.bg-d {
+  background-color: var(--bg-d);
+}
+
+.bg-image {
+  width: 100%;
+  height: 100vh;
+  background: url('./images/hero.jpg');
+  background-position: center;
+  background-attachment: fixed;
+  background-size: 120%;
+}
+
+.container {
+  padding: 100px;
+}
+
+.quote {
+  font-size: 27px;
+  font-weight: 400;
+}
+
+.author {
+  font-size: 23px;
+  font-style: italic;
 }
