--- a/style.css
+++ b/style.css
@@ -2,11 +2,9 @@
 
 :root {
   --main: #333;
-  --second: #8b0000;
-  --bg: #888;
-  --bg-l: #eee;
-  --bg-m: #ededed;
-  --bg-d: #dedede;
+  --second: #bc1616;
+  --bg: #87ceeb;
+  --feat: #fff;
   --box: 5px 10px 15px rgba(0, 0, 0, 0.3);
 }
 
@@ -46,28 +44,6 @@ p {
   text-align: center;
 }
 
-.bg-l,
-.bg-m,
-.bg-d {
-  background-color: green;
-  padding: 10px 35px;
-  margin: 100px 0;
-  border-radius: 5px;
-  box-shadow: var(--box);
-}
-
-.bg-l {
-  background-color: var(--bg-l);
-}
-
-.bg-m {
-  background-color: var(--bg-m);
-}
-
-.bg-d {
-  background-color: var(--bg-d);
-}
-
 .bg-image {
   width: 100%;
   height: 100vh;
@@ -79,6 +55,14 @@ p {
 
 .container {
   padding: 100px;
+}
+
+.feature {
+  background-color: var(--feat);
+  padding: 10px 35px;
+  margin: 100px 0;
+  border-radius: 5px;
+  box-shadow: var(--box);
 }
 
 .quote {
